--- a/qbenchmarks/data-qproof/eden/Makefile
+++ b/qbenchmarks/data-qproof/eden/Makefile
@@ -3,6 +3,7 @@ INTERP=python3
 # V/v: Reorder/don't reorder variables
 # B/b: Reorder/don't reorder buckets
 # C/c: Use/don't use clustering of input clauses
+# np: Don't generate proof
 MODE=plain
 BDIR=../..
 GDIR=$(BDIR)/eden
@@ -31,7 +32,7 @@ VbC: goe-$(MODE)-$(R)x$(C)-VbC.data
 UBC: goe-$(MODE)-$(R)x$(C)-UBC.data
 RRC: goe-$(MODE)-$(R)x$(C)-RRC.data
 
-
+np: goe-$(MODE)-$(R)x$(C)-np.data
 
 goe-$(MODE)-$(R)x$(C).qcnf:
 	$(GEN) $(R) $(C) > goe-$(MODE)-$(R)x$(C).qcnf
@@ -92,6 +93,12 @@ goe-$(MODE)-$(R)x$(C)-UBC.data: goe-$(MODE)-$(R)x$(C).qcnf
 	 	-i goe-$(MODE)-$(R)x$(C).qcnf -o goe-$(MODE)-$(R)x$(C).qproof | tee goe-$(MODE)-$(R)x$(C)-UBC.data
 	$(CHECK) -S -i goe-$(MODE)-$(R)x$(C).qcnf -p goe-$(MODE)-$(R)x$(C).qproof | tee -a goe-$(MODE)-$(R)x$(C)-UBC.data
 	rm -f goe-$(MODE)-$(R)x$(C).qproof
+
+goe-$(MODE)-$(R)x$(C)-np.data: goe-$(MODE)-$(R)x$(C).qcnf
+	$(SOLVE) -m n -v $(VLEVEL) -b \
+	        -p goe-$(MODE)-$(R)x$(C).vorder \
+	        -c goe-$(MODE)-$(R)x$(C).cluster \
+	 	-i goe-$(MODE)-$(R)x$(C).qcnf  | tee goe-$(MODE)-$(R)x$(C)-np.data
 
 demo:
 	$(GEN) $(R) $(C) > goe-$(MODE)-$(R)x$(C)-demo.qcnf
