--- a/qbenchmarks/data-qrat/ldom/Makefile
+++ b/qbenchmarks/data-qrat/ldom/Makefile
@@ -12,7 +12,7 @@ BDIR=../..
 NDIR=$(BDIR)/ldominoes
 SDIR=$(BDIR)/../qbf
 QDIR=../../../../qrat-trim
-TLIM=3600
+TLIM=4000
 CAT=BY5
 
 GEN=$(NDIR)/gen_ldom.py
@@ -80,21 +80,23 @@ ildom$(CAT)-$(N)-ra.data:
 
 
 data:
-	$(CGRAB) ldom*-sa.data > ldom-bdd-sa-clauses.csv
-	$(CGRAB) ldom*-ra.data > ldom-bdd-ra-clauses.csv
-	$(TGRAB) ldom*-sa.data > ldom-bdd-sa-seconds.csv
-	$(TGRAB) ldom*-ra.data > ldom-bdd-ra-seconds.csv
-	$(CGRAB) ildom*-sa.data > ildom-bdd-sa-clauses.csv
-	$(CGRAB) ildom*-ra.data > ildom-bdd-ra-clauses.csv
-	$(TGRAB) ildom*-sa.data > ildom-bdd-sa-seconds.csv
-	$(TGRAB) ildom*-ra.data > ildom-bdd-ra-seconds.csv
-	$(AGRAB) ldom*-ra.data > ldom-bdd-ra-applies.csv
-	$(AGRAB) ldom*-sa.data > ldom-bdd-sa-applies.csv
-	$(AGRAB) ldom*-na.data > ldom-bdd-na-applies.csv
-	$(AGRAB) ldom*-nae.data > ldom-bdd-nae-applies.csv
-	$(AGRAB) ldom*-nau.data > ldom-bdd-nau-applies.csv
-	$(AGRAB) ldom*-naeu.data > ldom-bdd-naeu-applies.csv
-	$(VGRAB) *.data | grep -v ERR > ldom-solve-check.csv
+#	$(CGRAB) ldom*-sa.data > ldom-bdd-sa-clauses.csv
+#	$(CGRAB) ldom*-ra.data > ldom-bdd-ra-clauses.csv
+#	$(TGRAB) ldom*-sa.data > ldom-bdd-sa-seconds.csv
+#	$(TGRAB) ldom*-ra.data > ldom-bdd-ra-seconds.csv
+#	$(CGRAB) ildom*-sa.data > ildom-bdd-sa-clauses.csv
+#	$(CGRAB) ildom*-ra.data > ildom-bdd-ra-clauses.csv
+#	$(TGRAB) ildom*-sa.data > ildom-bdd-sa-seconds.csv
+#	$(TGRAB) ildom*-ra.data > ildom-bdd-ra-seconds.csv
+#	$(AGRAB) ldom*-ra.data > ldom-bdd-ra-applies.csv
+#	$(AGRAB) ldom*-sa.data > ldom-bdd-sa-applies.csv
+#	$(AGRAB) ldom*-na.data > ldom-bdd-na-applies.csv
+#	$(AGRAB) ldom*-nae.data > ldom-bdd-nae-applies.csv
+#	$(AGRAB) ldom*-nau.data > ldom-bdd-nau-applies.csv
+#	$(AGRAB) ldom*-naeu.data > ldom-bdd-naeu-applies.csv
+#	$(VGRAB) *.data | grep -v ERR > ldom-solve-check.csv
+	$(VGRAB) *BY5S*.data > ldom-qrat-sat-seconds.csv
+	$(VGRAB) *BY5R*.data > ldom-qrat-ref-seconds.csv
 
 
 clean:
