--- a/qbenchmarks/data-qrat/ldom/Makefile
+++ b/qbenchmarks/data-qrat/ldom/Makefile
@@ -72,7 +72,8 @@ ldom$(CAT)-$(N)-ra.data:
 		-p ldom$(CAT)-$(N)-ra.order \
 		-L ldom$(CAT)-$(N)-ra.data
 	$(CHECK) ldom$(CAT)-$(N)-ra-expand.qcnf ldom$(CAT)-$(N)-ra.qrat -t $(TLIM) | tee -a ldom$(CAT)-$(N)-ra.data
-	rm -f ldom$(CAT)-$(N)-ra.qrat
+#	$(CHECK) ldom$(CAT)-$(N)-ra.qcnf ldom$(CAT)-$(N)-ra.qrat -t $(TLIM) | tee -a ldom$(CAT)-$(N)-ra.data
+#	rm -f ldom$(CAT)-$(N)-ra.qrat
 
 ldom$(CAT)-$(N)-dsa.data:
 	$(GEN) -t a -n $(N) -r ldom$(CAT)-$(N)-dsa 
@@ -155,8 +156,10 @@ data:
 #	$(AGRAB) ldom*-nau.data > ldom-bdd-nau-applies.csv
 #	$(AGRAB) ldom*-naeu.data > ldom-bdd-naeu-applies.csv
 #	$(VGRAB) *.data | grep -v ERR > ldom-solve-check.csv
-	$(VGRAB) *BY5S*.data > ldom-qrat-sat-seconds.csv
-	$(VGRAB) *BY5R*.data > ldom-qrat-ref-seconds.csv
+	$(VGRAB) *BY5S*-sa.data > ldom-qrat-sat-seconds.csv
+	$(VGRAB) *BY5R*-ra.data > ldom-qrat-ref-seconds.csv
+	$(VGRAB) *BY5S*-dsa.data > ldom-qrat-dual-sat-seconds.csv
+	$(VGRAB) *BY5R*-dra.data > ldom-qrat-dual-ref-seconds.csv
 
 
 clean:
